--- a/app/views/00a-check-your-email.html
+++ b/app/views/00a-check-your-email.html
@@ -34,7 +34,7 @@
         Check your email
       </h1>
 
-      <p class="govuk-body">Enter the 6 digit code we’ve sent to your work email address. It might take a minute or so to arrive. If you do not use it within 5 minutes, you’ll need to get a new code.</p>
+      <p class="govuk-body">Enter the 6 digit code we&rsquo;ve sent to your work email address. It might take a minute or so to arrive. If you do not use it within 5 minutes, you’ll need to get a new code.</p>
 
       <div class="govuk-form-group">
         <label class="govuk-label govuk-label--s" for="code">
@@ -47,12 +47,11 @@
         <a href="" class="govuk-link">Get new code</a>
       </p>
 
-        
       {% from "govuk/components/button/macro.njk" import govukButton %}
 
       {{ govukButton({
         text: "Sign in",
-        href: "01-life-event-home"
+        href: "births/multipleBirths/01-search"
       }) }}
 
     </div>
