--- a/app/views/births/multipleBirths/00-sign-in.html
+++ b/app/views/births/multipleBirths/00-sign-in.html
@@ -83,7 +83,7 @@
 
       {{ govukButton({
         text: "Continue",
-        href: "00a-check-your-email"
+        href: "01-life-event-home.html"
       }) }}
 
     </div>
