CRPF4-0000 fixed task list bug

--- a/app/views/births/multipleBirths/childsDetails/01-name-date.html
+++ b/app/views/births/multipleBirths/childsDetails/01-name-date.html
@@ -151,16 +151,13 @@ href: "javascript:window.history.back()"
                 </div>
               </fieldset>
             </div>
-
-
-
           </div>
 
          
           <div class="govuk-form-group">
     <fieldset class="govuk-fieldset">
       <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">Date of birth</legend>
-      <div id="dateOfDeath-hint" class="govuk-hint">For example, 23 11 2024.</div>
+      <div id="dateOfDeath-hint" class="govuk-hint">For example, 23 11 2024</div>
       <div id="dateOfDeath_input" class="govuk-date-input">
         <div class="govuk-date-input__item">
           <div class="govuk-form-group">
